--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 		<surefire.version>3.0.0-M5</surefire.version>
         <!--	<surefire.version>2.22.2</surefire.version> -->
 
-            <!-- Libraries -->
+		<!-- Libraries -->
 		<dddbits.version>0.0.1</dddbits.version>
 		<spring.boot.version>2.3.4.RELEASE</spring.boot.version>
 		<mapstruct.version>1.3.1.Final</mapstruct.version>
@@ -29,7 +29,7 @@
 
 		<!-- Libraries for test -->
 		<junit.jupiter.version>5.7.0</junit.jupiter.version>
-		<junit.platform.version>1.6.2</junit.platform.version>
+		<junit.platform.version>1.7.0</junit.platform.version>
 		<assertj.version>3.17.2</assertj.version>
 		<mockito.version>3.5.11</mockito.version>
 	</properties>
@@ -104,12 +104,12 @@
 			<scope>compile</scope>
 		</dependency>
 
-<!-- 		<dependency> -->
-<!-- 			<groupId>org.junit.jupiter</groupId> -->
-<!-- 			<artifactId>junit-jupiter</artifactId> -->
-<!-- 			<version>${junit.jupiter.version}</version> -->
-<!-- 			<scope>test</scope> -->
-<!-- 		</dependency> -->
+ 		<dependency>
+ 			<groupId>org.junit.jupiter</groupId>
+ 			<artifactId>junit-jupiter</artifactId>
+ 			<version>${junit.jupiter.version}</version>
+ 			<scope>test</scope>
+ 		</dependency>
 
 <!-- 		<dependency> -->
 <!-- 			<groupId>org.junit.platform</groupId> -->
@@ -118,19 +118,21 @@
 <!-- 			<scope>test</scope> -->
 <!-- 		</dependency> -->
 
-		<dependency>
-			<groupId>org.junit.jupiter</groupId>
-			<artifactId>junit-jupiter-engine</artifactId>
-			<version>${junit.jupiter.version}</version>
-			<scope>test</scope>
-		</dependency>
+		<!--
+                 <dependency>
+                    <groupId>org.junit.jupiter</groupId>
+                    <artifactId>junit-jupiter-engine</artifactId>
+                    <version>${junit.jupiter.version}</version>
+                    <scope>test</scope>
+                </dependency>
 
-		<dependency>
-			<groupId>org.junit.jupiter</groupId>
-			<artifactId>junit-jupiter-api</artifactId>
-			<version>${junit.jupiter.version}</version>
-			<scope>test</scope>
-		</dependency>
+                <dependency>
+                    <groupId>org.junit.jupiter</groupId>
+                    <artifactId>junit-jupiter-api</artifactId>
+                    <version>${junit.jupiter.version}</version>
+                    <scope>test</scope>
+                </dependency>
+                -->
 
 		<dependency>
 			<groupId>org.assertj</groupId>
@@ -178,7 +180,7 @@
 			<plugin>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>${surefire.version}</version>
-				<!-- 
+				<!--
 				<configuration>
 					<argLine>
                         - -illegal-access=permit
