--- a/pom.xml
+++ b/pom.xml
@@ -16,15 +16,16 @@
 	<properties>
 		<!-- Build -->
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<java.version>14</java.version>
+		<java.version>15</java.version>
 		<maven.compiler.version>3.8.1</maven.compiler.version>
 		<surefire.version>3.0.0-M5</surefire.version>
         <!--	<surefire.version>2.22.2</surefire.version> -->
 
 		<!-- Libraries -->
+		<jmolecules.version>1.1.0</jmolecules.version>
 		<dddbits.version>0.0.1</dddbits.version>
 		<spring.boot.version>2.3.4.RELEASE</spring.boot.version>
-		<mapstruct.version>1.3.1.Final</mapstruct.version>
+		<mapstruct.version>1.4.1.Final</mapstruct.version>
 		<gson.version>2.8.6</gson.version>
 
 		<!-- Libraries for test -->
@@ -32,6 +33,7 @@
 		<junit.platform.version>1.7.0</junit.platform.version>
 		<assertj.version>3.17.2</assertj.version>
 		<mockito.version>3.5.11</mockito.version>
+		<archunit.version>0.14.1</archunit.version>
 	</properties>
 
 	<modules>
@@ -55,6 +57,11 @@
 	</dependencyManagement>
 
 	<dependencies>
+		<dependency>
+			<groupId>org.jmolecules</groupId>
+			<artifactId>jmolecules-ddd</artifactId>
+			<version>${jmolecules.version}</version>
+		</dependency>
 		<dependency>
 			<groupId>io.hschwentner.dddbits</groupId>
 			<artifactId>dddbits</artifactId>
@@ -154,6 +161,13 @@
 			<version>${mockito.version}</version>
 			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>com.tngtech.archunit</groupId>
+			<artifactId>archunit</artifactId>
+			<version>${archunit.version}</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -180,6 +194,16 @@
 			<plugin>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>${surefire.version}</version>
+				<!--
+				 Idea from https://sormuras.github.io/blog/2018-09-11-testing-in-the-modular-world#in-module-testing-with-module-infojava
+				<configuration>
+					<argLine>
+						- -patch-module io.leasingninja.sales=src/main/java
+						- -patch-module io.leasingninja.riskmanagement=src/main/java
+					</argLine>
+				</configuration>
+				-->
+
 				<!--
 				<configuration>
 					<argLine>
