--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,10 +7,13 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-java@v2
+      - name: Checkout source code
+        uses: actions/checkout@v2
+      - name: Set up JDK
+        uses: actions/setup-java@v2
         with:
           java-version: '15'
+          distribution: 'adopt'
       - name: Cache Maven packages
         uses: actions/cache@v2
         with:
