--- a/pom.xml
+++ b/pom.xml
@@ -22,18 +22,18 @@
         <!--	<surefire.version>2.22.2</surefire.version> -->
 
 		<!-- Libraries -->
-		<jmolecules.version>1.1.0</jmolecules.version>
+		<jmolecules.version>1.2.0</jmolecules.version>
 		<dddbits.version>0.0.1</dddbits.version>
-		<spring.boot.version>2.3.4.RELEASE</spring.boot.version>
-		<mapstruct.version>1.4.1.Final</mapstruct.version>
+		<spring.boot.version>2.4.5</spring.boot.version>
+		<mapstruct.version>1.4.2.Final</mapstruct.version>
 		<gson.version>2.8.6</gson.version>
 
 		<!-- Libraries for test -->
-		<junit.jupiter.version>5.7.0</junit.jupiter.version>
-		<junit.platform.version>1.7.0</junit.platform.version>
-		<assertj.version>3.17.2</assertj.version>
-		<mockito.version>3.5.11</mockito.version>
-		<archunit.version>0.14.1</archunit.version>
+		<junit.jupiter.version>5.7.1</junit.jupiter.version>
+		<junit.platform.version>1.7.1</junit.platform.version>
+		<assertj.version>3.19.0</assertj.version>
+		<mockito.version>3.9.0</mockito.version>
+		<archunit.version>0.18.0</archunit.version>
 	</properties>
 
 	<modules>
