--- a/leasingninja-webapp/src/main/resources/application.properties
+++ b/leasingninja-webapp/src/main/resources/application.properties
@@ -3,6 +3,8 @@ spring.h2.console.enabled=true
 #spring.h2.console.path=/h2-console
 
 # Datasource
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=create
 spring.datasource.url=jdbc:h2:file:~/test
 spring.datasource.username=sa
 spring.datasource.password=
