--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
 		<jmolecules.version>1.4.0</jmolecules.version>
 		<dddbits.version>0.0.1</dddbits.version>
 		<spring.boot.version>2.5.2</spring.boot.version>
+		<log4j.version>2.17.0</log4j.version>
 		<mapstruct.version>1.4.2.Final</mapstruct.version>
 		<gson.version>2.8.7</gson.version>
 
@@ -92,6 +93,18 @@
 			<optional>true</optional>
 		</dependency>
 
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-api</artifactId>
+			<version>${log4j.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-core</artifactId>
+			<version>${log4j.version}</version>
+			<scope>runtime</scope>
+		</dependency>
+		
 		<dependency>
 			<groupId>org.mapstruct</groupId>
 			<artifactId>mapstruct</artifactId>
