--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,11 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.jmolecules</groupId>
+			<artifactId>jmolecules-layered-architecture</artifactId>
+			<version>${jmolecules.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.jmolecules</groupId>
 			<artifactId>jmolecules-ddd</artifactId>
 			<version>${jmolecules.version}</version>
 		</dependency>
