--- a/pom.xml
+++ b/pom.xml
@@ -18,24 +18,23 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<java.version>18</java.version>
 		<maven.compiler.version>3.10.1</maven.compiler.version>
-		<surefire.version>3.0.0-M7</surefire.version>
-		<failsafe.version>3.0.0-M7</failsafe.version>
-		<!--	<surefire.version>2.22.2</surefire.version> -->
+		<surefire.version>3.1.0</surefire.version>
+		<failsafe.version>3.11.0</failsafe.version>
 
 		<!-- Libraries -->
-        <jmolecules.version>1.6.0</jmolecules.version>
+        <jmolecules.version>1.7.0</jmolecules.version>
         <jmolecules-integrations.version>1.6.0</jmolecules-integrations.version>
 		<dddbits.version>0.0.1</dddbits.version>
-		<spring.boot.version>2.7.2</spring.boot.version>
-		<mapstruct.version>1.5.2.Final</mapstruct.version>
-		<gson.version>2.9.1</gson.version>
+		<spring.boot.version>3.1.0</spring.boot.version>
+		<mapstruct.version>1.5.5.Final</mapstruct.version>
+		<gson.version>2.10.1</gson.version>
 
 		<!-- Libraries for test -->
-		<junit.jupiter.version>5.9.0</junit.jupiter.version>
-		<junit.platform.version>1.9.0</junit.platform.version>
-		<assertj.version>3.23.1</assertj.version>
-		<mockito.version>4.7.0</mockito.version>
-		<archunit.version>0.23.1</archunit.version>
+		<junit.jupiter.version>5.9.3</junit.jupiter.version>
+		<junit.platform.version>1.9.3</junit.platform.version>
+		<assertj.version>3.24.2</assertj.version>
+		<mockito.version>5.3.1</mockito.version>
+		<archunit.version>1.0.1</archunit.version>
 	</properties>
 
 	<modules>
