--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
 		<java.version>20</java.version>
 		<maven.compiler.version>3.11.0</maven.compiler.version>
 		<surefire.version>3.1.0</surefire.version>
-		<failsafe.version>3.11.0</failsafe.version>
+		<failsafe.version>3.1.0</failsafe.version>
 
 		<!-- Libraries -->
         <jmolecules.version>1.7.0</jmolecules.version>
@@ -134,7 +134,6 @@
 <!-- 		<dependency> -->
 <!-- 			<groupId>org.junit.platform</groupId> -->
 <!-- 			<artifactId>junit-platform-launcher</artifactId> -->
-<!-- 			<version>${junit.platform.version}</version> -->
 <!-- 			<scope>test</scope> -->
 <!-- 		</dependency> -->
 
@@ -142,14 +141,12 @@
                  <dependency>
                     <groupId>org.junit.jupiter</groupId>
                     <artifactId>junit-jupiter-engine</artifactId>
-                    <version>${junit.jupiter.version}</version>
                     <scope>test</scope>
                 </dependency>
 
                 <dependency>
                     <groupId>org.junit.jupiter</groupId>
                     <artifactId>junit-jupiter-api</artifactId>
-                    <version>${junit.jupiter.version}</version>
                     <scope>test</scope>
                 </dependency>
                 -->
@@ -191,7 +188,8 @@
 				<version>${spring.boot.version}</version>
 			</plugin>
 			<plugin>
-				<artifactId>maven-compiler-plugin</artifactId>
+				<groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
 				<version>${maven.compiler.version}</version>
 				<configuration>
 					<release>${java.version}</release>
@@ -205,7 +203,8 @@
 				</configuration>
 			</plugin>
 			<plugin>
-				<artifactId>maven-surefire-plugin</artifactId>
+				<groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
 				<version>${surefire.version}</version>
 				<!--
 				 Idea from https://sormuras.github.io/blog/2018-09-11-testing-in-the-modular-world#in-module-testing-with-module-infojava
@@ -228,7 +227,8 @@
 				 -->
 			</plugin>
 			<plugin>
-				<artifactId>maven-failsafe-plugin</artifactId>
+				<groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-failsafe-plugin</artifactId>
 				<version>${failsafe.version}</version>
 			</plugin>
 	</plugins>
